	  Previously NSFileHandle would create a new thread of each pipe that
	  was being waited on.
	* This extra thread is used to perform read/write operations in 2048-byte
	  chunks from each pipe. This greatly improves interactivity.
	* Entering a different runloop mode no longer blocks PTYTask read/write
	  or drawing. Fixes #2682132

2009-06-09 delx
	* Always disable Apple's smooth scrolling to avoid drawing corruption
	* Fixed xterm window title reporting

2009-05-08 delx
	* PTYTextView now uses the Cocoa drawing machinery as Apple intended.
	  This means dirty flagged chars are converted into dirty rectangles.
	  No more forceUpdate, drawRect draws the rectangle it is given. It does
	  check needsToDrawRect for each line to avoid overdrawing.  This should
	  hopefully make drawing more reliable on Tiger and Leopard.
	* Selected text will now be invalidated only one of the characters in the
	  selection is changed.
	* The end result of these changes should be fast drawing on all OSes
	  with all the features of previous versions restored.
	* If no working directory is specified then new tabs will open in the
	  same directory as the previous session. This doesn't work with the
	  default settings yet. Need to execute the user's login shell directly
	  rather than using 'login -fp' to do it for us.
	* Clear the bell symbol upon any key press
	* Converted to XCode 3.1 project format and IB 3.0 XIBs
	* Report as xterm patch level 95 so Vim detects ttymouse=xterm2, also
	  increased default refresh rate.

2009-04-15 delx
	* Fixed selection highlighting when using background images (#2762076)

2009-04-10 ujwal
	* Moved display update timer from PTYTask to PTYSession. PTYTask should 
	  have no knowledge of display logic. Timer is now a repeating timer.

2009-04-10 delx
	* Revert to old force screen update behaviour for 10.4
	* Fix overwriting of static window titles (#2744363)
	* Fixed a bug when pasting more than 1024 characters of text
	* Rewrote bits of PTYTask
